--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">MyTimer</string>
     <string name="start_button_string">Start</string>
-    <string name="stop_button_string">Stop</string>
+    <string name="pause_button_string">Pause</string>
     <string name="reset_button_string">Reset</string>
 </resources>
